# encryption-algorithms-demo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: lib.rs  main.rs
src/common/: mod.rs  output.rs  validation.rs
src/rsa/: README.md  constants.rs  demo.rs  encryption.rs  key_generation.rs  math_utils.rs  mod.rs  output.rs  tests.rs  text_encoding.rs  types.rs  validation.rs
src/sha256/: README.md  compression.rs  constants.rs  demo.rs  math_utils.rs  mod.rs  output.rs  preprocessing.rs  types.rs  validation.rs
src/wasm/: mod.rs
tests/: common_tests.rs  rsa_tests.rs
tests/common/: mod.rs  output_tests.rs
tests/rsa/: encryption_tests.rs  integration_tests.rs  key_generation_tests.rs  math_utils_tests.rs  mod.rs  text_encoding_tests.rs  validation_tests.rs
web/: index.html  package-lock.json  package.json  tsconfig.json
web/css/: styles.css
web/ts/: app.ts  demos.ts  ui.ts  utils.ts  wasm.ts
