[package]
name = "encryption-algorithms-demo"
version = "0.1.0"
edition = "2024"
description = "Demo for of cryptographic algorithms"
license = "MIT"

[[bin]]
name = "encryption-demo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rand = "0.9.2"
num-bigint = "0.4"
num-traits = "0.2"

[dev-dependencies]
