[package]
name = "encryption-algorithms-demo"
version = "0.1.0"
edition = "2024"
description = "Demo for of cryptographic algorithms"
license = "MIT"

[lib]
name = "encryption_demo"
path = "src/lib.rs"

[[bin]]
name = "encryption-demo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
