[package]
name = "encryption-algorithms-demo"
version = "0.1.0"
edition = "2024"
description = "Demo for of cryptographic algorithms"
license = "MIT"

[lib]
name = "encryption_demo"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "encryption-demo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "s"
lto = true
